--- a/config.env
+++ b/config.env
@@ -2,23 +2,23 @@
 
 # REQUIRED CONFIG
 #Create Bot @BotFather
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID = 
+BOT_TOKEN = "1959698477:AAHfPWK8463Yzo31WFckE0t5MQO05NAfd58"
+GDRIVE_FOLDER_ID = "10Tmsn_l94It3dRXJgPXIbcdKvUP_KS-g"
+OWNER_ID = 904141927
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 25
 AUTO_DELETE_MESSAGE_DURATION = -1
 IS_TEAM_DRIVE = "True"
 # APP ID & API Hash - http://my.telegram.org
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+TELEGRAM_API = 6564972
+TELEGRAM_HASH = "22e3f3635331e3e4cd7a02045d8acb3d"
 # OPTIONAL CONFIG
 DATABASE_URL = ""
 AUTHORIZED_CHATS = ""  # Split by space
 SUDO_USERS = ""  # Split by space
 IGNORE_PENDING_REQUESTS = "True"
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+USE_SERVICE_ACCOUNTS = "True"
+INDEX_URL = "https://restless-recipe.driveindex.workers.dev/1:/Bond"
 STATUS_LIMIT = "3"  # Recommended limit is 3
 # Leech
 TG_SPLIT_SIZE = ""  # leave it empty for max size (2GB)
@@ -36,10 +36,10 @@ SHORTENER_API = ""
 # qBittorrent
 IS_VPS = ""  # Don't set this to True even if you're using VPS, unless facing error with web server
 SERVER_PORT = "80"  # Only For VPS even if IS_VPS is False
-BASE_URL_OF_BOT = "https://appname.herokuapp.com"  # Web Link, Required for Heroku to avoid sleep or use worker if you don't want to use web (selection)
+BASE_URL_OF_BOT = "https://hoiulalulali.herokuapp.com"  # Web Link, Required for Heroku to avoid sleep or use worker if you don't want to use web (selection)
 # If you want to use Credentials externally from Index Links, fill these vars with the direct links
 # These are optional, if you don't know about them, simply leave them empty
-ACCOUNTS_ZIP_URL = ""
+ACCOUNTS_ZIP_URL = "https://dl.dropboxusercontent.com/s/sghxbdozjioc7ns/jamesnolan428.zip"
 TOKEN_PICKLE_URL = ""
 MULTI_SEARCH_URL = ""  # You can use gist raw link (remove commit id from the link, like config raw link check Heroku guide)
 # To use limit leave space between number and unit. Available units are (gb or GB, tb or TB)
